--- a/.github/workflows/NanoPi-R5S-R5C-full.yml
+++ b/.github/workflows/NanoPi-R5S-R5C-full.yml
@@ -79,6 +79,7 @@ jobs:
       run: |
         cd $OPENWRTROOT
         cat .config
+        python3 -m pip install elftools
         make download -j8
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
