--- a/.github/workflows/NanoPi-R5S-R5C-full.yml
+++ b/.github/workflows/NanoPi-R5S-R5C-full.yml
@@ -28,7 +28,7 @@ env:
 
 jobs:
   Build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     outputs:
       OPENWRTROOT: ${{ steps.update.outputs.OPENWRTROOT }}
       PLATFORM: ${{ steps.compile.outputs.PLATFORM }}
@@ -79,6 +79,9 @@ jobs:
       run: |
         cd $OPENWRTROOT
         cat .config
+        wget https://bootstrap.pypa.io/pip/2.7/get-pip.py
+        sudo python2.7 get-pip.py
+        pip2 install pyelftools
         make download -j8
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
