--- a/.github/workflows/NanoPi-R5S-R5C-full.yml
+++ b/.github/workflows/NanoPi-R5S-R5C-full.yml
@@ -79,6 +79,7 @@ jobs:
       run: |
         cd $OPENWRTROOT
         cat .config
+        sudo apt install python2-minimal
         wget https://bootstrap.pypa.io/pip/2.7/get-pip.py
         sudo python2.7 get-pip.py
         pip2 install pyelftools
