--- a/.github/workflows/NanoPi-R5S-R5C-full.yml
+++ b/.github/workflows/NanoPi-R5S-R5C-full.yml
@@ -79,7 +79,7 @@ jobs:
       run: |
         cd $OPENWRTROOT
         cat .config
-        sudo apt install python2-minimal
+        sudo pip3 install elftools
         make download -j8
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
