--- a/.github/workflows/NanoPi-R5S-R5C-simplify.yml
+++ b/.github/workflows/NanoPi-R5S-R5C-simplify.yml
@@ -79,6 +79,13 @@ jobs:
       run: |
         cd $OPENWRTROOT
         cat .config
+        sudo apt-add-repository universe
+        sudo apt update
+        sudo apt install python2-minimal -y
+        wget https://bootstrap.pypa.io/pip/2.7/get-pip.py
+        sudo python2.7 get-pip.py
+        sudo pip2 install pyelftools==0.27
+        sudo pip3 install pyelftools
         make download -j8
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
