--- a/.github/workflows/NanoPi-R5S-R5C-simplify.yml
+++ b/.github/workflows/NanoPi-R5S-R5C-simplify.yml
@@ -86,7 +86,7 @@ jobs:
         sudo python2.7 get-pip.py
         sudo pip2 install pyelftools==0.27
         sudo pip3 install pyelftools
-        make download -j8
+        make download V=sc
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
   
