--- a/.github/workflows/NanoPi-R5S-R5C-simplify.yml
+++ b/.github/workflows/NanoPi-R5S-R5C-simplify.yml
@@ -86,7 +86,7 @@ jobs:
         sudo python2.7 get-pip.py
         sudo pip2 install pyelftools==0.27
         sudo pip3 install pyelftools
-        make download V=sc
+        make download V=s
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
   
@@ -95,11 +95,11 @@ jobs:
       run: |
         cd $OPENWRTROOT
         echo -e "$(nproc) thread compile"
-        make tools/compile -j$(nproc) V=sc || make tools/compile -j$(nproc)
-        make toolchain/compile -j$(nproc) V=sc || make toolchain/compile -j$(nproc)
-        make target/compile -j$(nproc) V=sc || make target/compile -j$(nproc) IGNORE_ERRORS=1
+        make tools/compile -j$(nproc) V=s || make tools/compile -j$(nproc)
+        make toolchain/compile -j$(nproc) V=s || make toolchain/compile -j$(nproc)
+        make target/compile -j$(nproc) V=s || make target/compile -j$(nproc) IGNORE_ERRORS=1
         make diffconfig
-        make package/compile -j$(nproc) IGNORE_ERRORS=1 V=sc || make package/compile -j$(nproc) IGNORE_ERRORS=1
+        make package/compile -j$(nproc) IGNORE_ERRORS=1 V=s || make package/compile -j$(nproc) IGNORE_ERRORS=1
         make package/index
         cd $OPENWRTROOT/bin/packages/*
         PLATFORM=$(basename `pwd`)
