--- a/.github/workflows/NanoPi-R5S-R5C-simplify.yml
+++ b/.github/workflows/NanoPi-R5S-R5C-simplify.yml
@@ -45,6 +45,11 @@ jobs:
       run: |
         df -hT $PWD
         git clone $REPO_URL -b $REPO_BRANCH openwrt
+        sudo -E apt-get -qq update
+        sudo -E apt-get -qq install $(curl -fsSL https://raw.githubusercontent.com/bigbugcc/openwrts/master/openwrt-env)
+        sudo -E apt-get -qq install rdate
+        sudo -E apt-get -qq autoremove --purge
+        sudo -E apt-get -qq clean
 
     - name: Update Feeds
       id: update
