--- a/configs/lean/simplify.config
+++ b/configs/lean/simplify.config
@@ -263,7 +263,7 @@ CONFIG_PACKAGE_luci-app-quickstart=y
 CONFIG_PACKAGE_luci-app-socat=y
 # CONFIG_PACKAGE_luci-app-unblockneteasemusic=y
 CONFIG_PACKAGE_luci-app-oaf=y
-CONFIG_PACKAGE_luci-app-uugamebooster=y
+#CONFIG_PACKAGE_luci-app-uugamebooster=y
 CONFIG_PACKAGE_luci-app-wifischedule=y
 # CONFIG_PACKAGE_luci-app-xlnetacc=y
 # CONFIG_PACKAGE_luci-udptools=y
@@ -408,7 +408,7 @@ CONFIG_PACKAGE_gotop=y
 CONFIG_PACKAGE_tmate=y
 CONFIG_PACKAGE_udp2raw-tunnel=y
 CONFIG_PACKAGE_udpspeeder=y
-CONFIG_PACKAGE_uugamebooster=y
+#CONFIG_PACKAGE_uugamebooster=y
 CONFIG_PACKAGE_procd-ujail=y
 
 CONFIG_PACKAGE_iptables-mod-nat-extra=y
