--- a/.github/workflows/NanoPi-R5S-R5C-simplify.yml
+++ b/.github/workflows/NanoPi-R5S-R5C-simplify.yml
@@ -46,8 +46,8 @@ jobs:
         DEBIAN_FRONTEND: noninteractive
       run: |
         nohup sh -c 'sudo sysctl vm.swappiness=0'
-        sudo -E apt-get -qq update
-        sudo -E apt-get -qq install build-essential clang llvm flex g++ gawk gcc-multilib gettext \
+        sudo -E apt -qq update
+        sudo -E apt -qq install build-essential clang llvm flex g++ gawk gcc-multilib gettext \
         git libncurses5-dev libssl-dev python3-distutils python3-pyelftools python3-setuptools \
         python3-dev python3-pip rsync rdate unzip zlib1g-dev swig aria2 jq subversion qemu-utils ccache \
         rename libelf-dev device-tree-compiler libgnutls28-dev coccinelle libgmp3-dev libmpc-dev libfuse-dev \
@@ -59,11 +59,12 @@ jobs:
         libtool lrzsz mkisofs msmtp ninja-build p7zip p7zip-full patch pkgconf python2.7 python3 python3-pyelftools \
         python3-setuptools qemu-utils rsync scons squashfs-tools subversion swig texinfo uglifyjs upx-ucl unzip vim \
         wget xmlto xxd zlib1g-dev
+        make clang llvm nano python3-pip aria2
         pip3 install --user -U pylibfdt
-        sudo -E apt-get -qq purge azure-cli ghc* zulu* firefox powershell openjdk* dotnet* google* mysql* php* android*
+        sudo -E apt -qq purge azure-cli ghc* zulu* firefox powershell openjdk* dotnet* google* mysql* php* android*
         sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
-        sudo -E apt-get -qq autoremove --purge
-        sudo -E apt-get -qq clean
+        sudo -E apt -qq autoremove --purge
+        sudo -E apt -qq clean
         sudo timedatectl set-timezone "$TZ"
         echo -e "Total CPU cores\t: $(nproc)"
         cat /proc/cpuinfo | grep 'model name'
@@ -119,7 +120,7 @@ jobs:
         sudo python2.7 get-pip.py
         sudo pip2 install pyelftools==0.27
         sudo pip3 install pyelftools
-        make -j8 download
+        make -j$(nproc) download
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
   
@@ -128,9 +129,9 @@ jobs:
       run: |
         cd $OPENWRTROOT
         echo -e "$(nproc) thread compile"
-        make tools/compile -j$(nproc) V=s 
-        make toolchain/compile -j$(nproc) V=s 
-        make target/compile -j$(nproc) V=s 
+        make tools/compile -j$(nproc) V=sc 
+        make toolchain/compile -j$(nproc) V=sc 
+        make target/compile -j$(nproc) V=sc 
         make diffconfig
         make package/compile -j$(nproc) IGNORE_ERRORS=1 V=s
         make package/index
