--- a/.github/workflows/NanoPi-R5S-R5C-simplify.yml
+++ b/.github/workflows/NanoPi-R5S-R5C-simplify.yml
@@ -18,7 +18,7 @@ on:
 
 env:
   REPO_URL: https://github.com/DHDAXCW/lede-rockchip
-  REPO_BRANCH: stable
+  REPO_BRANCH: patch
   CONFIG_FILE: configs/lean/simplify.config
   DIY_SH: scripts/simplify.sh
   KMODS_IN_FIRMWARE: true
