--- a/.github/workflows/NanoPi-R5S-R5C-simplify.yml
+++ b/.github/workflows/NanoPi-R5S-R5C-simplify.yml
@@ -17,8 +17,8 @@ on:
   #   types: started
 
 env:
-  REPO_URL: https://github.com/DHDAXCW/lede-rockchip
-  REPO_BRANCH: patch
+  REPO_URL: https://github.com/coolsnowwolf/lede
+  REPO_BRANCH: master
   CONFIG_FILE: configs/lean/simplify.config
   DIY_SH: scripts/simplify.sh
   KMODS_IN_FIRMWARE: true
@@ -59,7 +59,7 @@ jobs:
         libtool lrzsz mkisofs msmtp ninja-build p7zip p7zip-full patch pkgconf python2.7 python3 python3-pyelftools \
         python3-setuptools qemu-utils rsync scons squashfs-tools subversion swig texinfo uglifyjs upx-ucl unzip vim \
         wget xmlto xxd zlib1g-dev
-        pip3 install --user -U pylibfdt
+        sudo pip3 install pylibfdt
         sudo -E apt -qq purge azure-cli ghc* zulu* firefox powershell openjdk* dotnet* google* mysql* php* android*
         sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
         sudo -E apt -qq autoremove --purge
@@ -128,11 +128,11 @@ jobs:
       run: |
         cd $OPENWRTROOT
         echo -e "$(nproc) thread compile"
-        make tools/compile -j$(nproc) V=sc 
-        make toolchain/compile -j$(nproc) V=sc 
-        make target/compile -j$(nproc) V=sc 
+        make tools/compile -j$(nproc) 
+        make toolchain/compile -j$(nproc) 
+        make target/compile -j$(nproc) 
         make diffconfig
-        make package/compile -j$(nproc) IGNORE_ERRORS=1 V=s
+        make package/compile -j$(nproc) IGNORE_ERRORS=1 
         make package/index
         cd $OPENWRTROOT/bin/packages/*
         PLATFORM=$(basename `pwd`)
